Adding all files first time

--- a/src/assets/css/styles.less
+++ b/src/assets/css/styles.less
@@ -1,5 +1,5 @@
 @import "reset";
-@import "abofmain";
 @import "header";
-@import "projectContainer";
-@import "footer";
+@import "draggable-button";
+@import "sticky-container";
+@import "variables";
