--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -1,30 +1,11 @@
-.header{
-    position: fixed;
-    top:0;
-    z-index:999;
-    width:100%;
-    left: 0;
-    .headerTop{
-        border-bottom: 1px solid #ccc;
-    	-webkit-transition: height 0.3s;
-        -moz-transition: height 0.3s;
-        -ms-transition: height 0.3s;
-        -o-transition: height 0.3s;
-        transition: height 0.3s;
-        padding: 8px 0;
-        .abofLogo{
-            text-align: center;
-        }
-    }
-    .headerNav{
-        padding: 10px;
-        border-bottom: 1px solid #ccc;
-         input[type="text"]{
-            background: #ccc none repeat scroll 0 0;
-            border: medium none;
-            font-size: 13px;
-            padding: 3px 12px;
-            width: 100%;
-         }
+.sticky-header{
+  	background: #1976D2;
+    padding: 5px 0;
+    color: #fff;
+    box-shadow:0px 0px  7px #010;
+
+    .jira-logo{
+	    font-family: fantasy;
+	    font-size: 20px;
     }
 }
