--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -7,6 +7,8 @@ Use: Reset Styles for all browsers
 body, p, blockquote {
 	margin: 0;
 	padding: 0;
+	height: 100vh;
+    background: #2196F3;
 }
 
 a img, iframe { border: none; }
